--- a/_posts/2024-05-21-LLM-Arena.md
+++ b/_posts/2024-05-21-LLM-Arena.md
@@ -25,9 +25,8 @@ A说：好的，大暴雨叔叔。
 ![image.png](https://s2.loli.net/2024/05/21/JrD3GUaN4uwhily.png)
 然后转战付费版，试了下gpt-4o，Gemini Pro1.5，以及Claude 3 Sonnet的答案都差不多
 ![2024-05-18 22.05.05.png](https://s2.loli.net/2024/05/18/mawTyFELW4RHvQo.png)
-直到打开了Claude-3 Opus，Oh！！！有希望，于是追问
 ![image.png](https://s2.loli.net/2024/05/21/kfRmQcoC571FJpb.png)
-果然！它是懂的！
+于是追问
 ![image.png](https://s2.loli.net/2024/05/21/sQ2ILoRE7bZnPkq.png)
-
+果然！它是懂的！
 好了，我宣布Claude Opus YYDS，以后中文任务就多去找你啦
