--- a/_posts/2024-05-21-LLM-Arena.md
+++ b/_posts/2024-05-21-LLM-Arena.md
@@ -32,6 +32,8 @@ A说：好的，大暴雨叔叔。
 
 转战付费版，试了下GPT-4o，Gemini Pro1.5，以及Claude 3 Sonnet，答案都差不多
 ![2024-05-18 22.05.05.png](https://s2.loli.net/2024/05/18/mawTyFELW4RHvQo.png)
+
+直到打开了Claude-3 Opus，Oh！！！有希望
 ![image.png](https://s2.loli.net/2024/05/21/kfRmQcoC571FJpb.png)
 于是追问
 ![image.png](https://s2.loli.net/2024/05/21/sQ2ILoRE7bZnPkq.png)
