--- a/_posts/2024-06-13-PCC.md
+++ b/_posts/2024-06-13-PCC.md
@@ -6,7 +6,7 @@ title: 苹果的隐私云计算（PCC）做了什么
 Created: 2024-06-11 14:06
 > TL;DR
 > 
-> PCC引入了苹果端侧的安全机制，以及一些模糊用户身份的机制，并不涉及隐私计算，数据还是会暴露给最终处理请求的那方。
+> PCC引入了苹果端侧的安全机制，以及一些模糊用户身份的机制，通过可信执行环境（TEE）提供一些隐私保护，数据还是会暴露给最终处理请求的那方。
 
 2024年6月11日凌晨，苹果WWDC大会如期而至，除了Vision Pro将于6月28日在中国区发售、iPhone终于能够通话录音、以及iPad终于有了计算器这些“亮点”以外，Apple Intelligence无疑是此次大会的重中之重。
 
